# NeuMIP

./: LICENSE.TXT  README.MD  angular.py  aux_info.py  build_cpputils.py  common.py  common_renderer.py  compile_openexr.sh  cpputils_test.py  error_metric.py  flip_loss.py  mipmaptexture.py  neural_rendering.py  neurtext.py  nicer.py  path_config.py  renderer.py  run.sh  rung.sh  visualizer.py
cpputils/: CMakeLists.txt  NeuralMaterial.h  TorchActiveModel.cu  TorchActiveModel.h  __init__.py  active_model.cpp  active_model.h  active_module_utils.cu  active_module_utils.h  active_modules.h  gpu_torch_utils.h  main.cu  neural_tex.h  storage_model.cpp  storage_model.h  storage_model_impl.h
cpputils/gpuhelper/: CMakeLists.txt  GPUhelper.cpp  GPUhelper.h
dataset/: dataset_reader.py  generator_dataset.py  generator_mitsuba.py  generator_mitsuba_assets.py  rays.py  sceneinfo.py  ubo2014specs.py
experiments/: __init__.py  simple.py
utils/: la2.py  la4.py  sampler.py  tensor.py
